# OpenEnv_PFMS

./: .dockerignore  Dockerfile  README.md  __init__.py  client.py  env.py  graders.py  help.txt  inference.py  models.py  openenv.yaml  play.py  pyproject.toml  requirements.txt  server.py
pfms_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  environment.py  requirements.txt
